# energy-dependency-inspector

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SPECIFICATION.md  TODOS.md  dependency_resolver.py  django-web.json  main.py  pyproject.toml  requirements-dev.txt  requirements-performance-analysis.txt  requirements-podman.txt  requirements.txt
.github/: dependabot.yml
core/: executor.py  interfaces.py  orchestrator.py  resolver.py
dependency_resolver/: __init__.py  __main__.py
dependency_resolver/core/: executor.py  interfaces.py  orchestrator.py  output_formatter.py  resolver.py  venv_checker.py
dependency_resolver/detectors/: apk_detector.py  apt_detector.py  docker_compose_detector.py  docker_info_detector.py  dpkg_detector.py  java_runtime_detector.py  maven_detector.py  npm_detector.py  pip_detector.py
dependency_resolver/executors/: __init__.py  docker_compose_executor.py  docker_executor.py  host_executor.py
detectors/: apk_detector.py  apt_detector.py  docker_compose_detector.py  docker_info_detector.py  dpkg_detector.py  npm_detector.py  pip_detector.py
docs/: ADDING_NEW_DETECTORS.md  TECHNICAL_COMPARISON_REPORT.md
docs/adr/: 0001-runtime-snapshot-approach.md  0002-modular-detector-architecture.md  0003-dpkg-query-for-package-information.md  0004-apk-info-for-alpine-packages.md  0004-apk-list-for-alpine-packages.md  0005-dependency-hash-strategy.md  0005-hash-generation-strategy.md  0006-pip-list-freeze-for-python-packages.md  0007-python-virtual-environment-detection.md  0008-apt-md5-hash-extraction.md  0009-read-only-operations.md  0010-unix-only-support.md  0011-npm-list-json-for-nodejs-packages.md
docs/analyses/: npm_hash_implementation_analysis.md
docs/detectors/: apk_detector.md  docker_compose_detector.md  docker_info_detector.md  dpkg_detector.md  npm_detector.md
docs/guides/: quick-start.md  troubleshooting.md
docs/technical/: README.md  adding-new-detectors.md
docs/technical/analyses/: npm_hash_implementation_analysis.md
docs/technical/architecture/: README.md  overview.md
docs/technical/detectors/: apk_detector.md  composer_detector.md  docker_info_detector.md  dpkg_detector.md  java_runtime_detector.md  maven_detector.md  npm_detector.md  pecl_detector.md  pip_detector.md
docs/tool-comparison/: README.md  syft-custom-template.tmpl
docs/tool-comparison/gmt-gunicorn/: dependency-resolver.json  syft-custom.json  syft-github_json.json  syft-spdx_json.json  trivy-spdx_json.json
docs/usage/: cli-guide.md  output-format.md  programmatic-api.md
energy_dependency_inspector/: __init__.py  __main__.py
energy_dependency_inspector/core/: orchestrator.py  venv_checker.py
energy_dependency_inspector/detectors/: composer_detector.py  docker_info_detector.py  host_info_detector.py  maven_detector.py  npm_detector.py  pecl_detector.py  pip_detector.py
energy_dependency_inspector/executors/: docker_executor.py
executors/: docker_compose_executor.py  docker_executor.py  host_executor.py
performance-analysis/: README.md  detector-benchmarks.sh  docker-performance-comparison.md  dpkg-batch-optimization-benchmark.md  parallel-execution-benchmarks.sh  parallel_execution_benchmark.py  performance-optimization-analysis.md  system_info.py
performance-analysis/detectors/: common.sh  host-benchmarks.sh  npm-benchmarks.sh  pip-benchmarks.sh
performance-analysis/timing-results/: host_timing_results.csv  npm_timing_results.csv  parallel_execution_results.csv  pip_timing_results.csv
results/: javascript.express.node-with-system-packages.json  javascript.express.node.json  python.django.gunicorn-with-system-packages.json  python.django.gunicorn.json  tfb-django-with-system-packages.json  tfb-django.json  tfb-express-with-system-packages.json  tfb-express.json
tests/: __init__.py  conftest.py  test_docker_executor_fallback.py  test_programmatic_interface.py  test_working_dir_validation.py
tests/apk_detector/: README.md  conftest.py  test_apk_docker_detection.py
tests/common/: __init__.py  docker_test_base.py
tests/core/: test_dependency_resolver.py  test_orchestrator.py  test_venv_checker.py
tests/detectors/apk/: README.md  test_apk_docker_detection.py
tests/detectors/composer/: Dockerfile.test-node-php-composer  README.md  test_composer_detector.py
tests/detectors/docker_compose/: README.md  docker-compose.yml  requirements.txt
tests/detectors/docker_info/: README.md  test_docker_info_detection.py
tests/detectors/dpkg/: README.md  test_dpkg_docker_detection.py
tests/django_docker_compose/: Dockerfile  README.md  test_django_docker_detection.py
tests/docker_compose_detector/: README.md  conftest.py  test_docker_compose_detection.py
tests/docker_info_detector/: README.md  test_docker_info_detection.py
tests/dpkg_detector/: README.md  conftest.py  test_dpkg_docker_detection.py
tests/executors/: test_docker_executor_fallback.py
tests/if_npm_docker/: README.md  test_if_npm_docker_detection.py
tests/integration/: test_cli.py  test_programmatic_interface.py  test_working_dir_validation.py
tests/npm_detector/: README.md  conftest.py  test_npm_docker_detection.py
tests/pip_detector/: README.md  test_pip_docker_detection.py  test_pip_venv_detection.py
tests/pip_hash_comparison/: Dockerfile.test-ubuntu20  Dockerfile.test-ubuntu22  Dockerfile.test-ubuntu24  README.md  run_cross_env_tests.sh  test_cross_environment_hash.py
(+38 files in other folders)
